# FastAPI_hw11

./: Procfile  README.md  docker-compose.yml  main.py  openapi.json  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 0b189e1624ec_updated_models_and_schemas.py  1f198746f013_init.py  6a23be19b636_user_confirmation.py  754e5af0f912_db_name_changed_to_fastapi_hw11.py  d10a77ff2f9c_init.py  fa9e441ebdba_created_user_and_auth.py  ff29329c7ed3_change_db_to_postgres.py
pg-data/: postmaster.pid
pg-data/base/1/: 2619  pg_internal.init
pg-data/base/16384/: 1247  1249  1249_fsm  1259  16389  16392  16394  16403  16408  16409  16410  16415  16416  16418  16734  16737  16739  16740  16745  16746  16748  16750  16756  16757  2224  2579  2604  2606  2608  2610  2619  2620  2656  2657  2658  2659  2662  2663  2664  2665  (+14 more)
pg-data/base/16425/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  16426  16427  16431  16432  16434  16435  16438  16440  16442  16443  (+250 more)
pg-data/base/16657/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  16683  16684  16689  16690  16692  16694  16700  16701  16708  16709  (+223 more)
pg-data/base/5/: 2619  pg_internal.init
pg-data/global/: 1260  1262  2671  2672  2676  pg_control  pg_internal.init
pg-data/pg_stat/: pgstat.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_unit_repository_contacts.py
