[tool.poetry]
name = "fastapi-hw11"
version = "0.1.0"
description = ""
authors = ["Aleksandr <aleksandr.voitushenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pydantic = {extras = ["email"], version = "^2.9.0"}
fastapi = "^0.114.0"
uvicorn = {extras = ["standort"], version = "^0.30.6"}
python-dotenv = "^1.0.1"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
redis = "^5.0.8"
pydantic-settings = "^2.5.2"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
