[tool.poetry]
name = "fastapi-hw11"
version = "0.1.0"
description = ""
authors = ["Aleksandr <aleksandr.voitushenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.1.1"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"
fastapi-limiter = "^0.1.6"
sqlalchemy = "^2.0.35"
pytest = "^8.3.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
libgravatar = "^1.0.4"
cloudinary = "^1.41.0"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
fastapi-mail = "^1.4.1"
python-multipart = "^0.0.12"
bcrypt = "^4.2.0"
jose = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
